--- a/baseApp/src/main/res/layout/action_bar_view.xml
+++ b/baseApp/src/main/res/layout/action_bar_view.xml
@@ -4,16 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fl_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/actionbar_height"
         android:layout_below="@+id/img_plan"
-        android:background="@color/color_dark"
+        android:background="@color/transparent"
         android:gravity="center"
-        android:minHeight="60dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -22,9 +21,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:onClick="@{()-> viewModel.actionLeft()}"
-            app:srcCompat="@mipmap/ic_back"
-            android:textSize="@dimen/connect_text_size_description" />
+            android:onClick="actionLeft"
+            android:textSize="@dimen/connect_text_size_description"
+            app:srcCompat="@mipmap/ic_back" />
 
         <TextView
             android:id="@+id/txt_title"
@@ -41,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:onClick="@{()-> viewModel.actionRight}"
+            android:onClick="actionRight"
             android:text="Close"
             android:textSize="@dimen/connect_text_size_description" />
 
