--- a/baseApp/src/main/res/values/colors.xml
+++ b/baseApp/src/main/res/values/colors.xml
@@ -4,11 +4,33 @@
     <color name="colorPrimaryDark">#607D8B</color>
     <color name="colorAccent">#1BBBEE</color>
 
+    <!--New color design-->
+    <color name="color_blue_dark">#0036E3</color>
+    <color name="color_blue_light">#68AFDD</color>
+
+    <color name="color_gold_dark">#5B7B50</color>
+    <color name="color_gold_light">#F3D4D1</color>
+
+    <color name="color_green_dark">#A0D45C</color>
+    <color name="color_green_light">#FAFCF8</color>
+
+    <color name="color_grey_dark">#787878</color>
+    <color name="color_grey_light">#F8F8F8</color>
+
+    <color name="color_bg_button">#4BAEEA</color>
+    <color name="color_bg_checkbox">#83CCE3</color>
+
+    <color name="color_text_white">#FAFFFF</color>
+    <color name="color_text_black">#282828</color>
+
+    <color name="color_item">#2F6680</color>
+
+
+
+
+
     <color name="transparent">#00000000</color>
-
     <color name="color_black">#000000</color>
-
-
     <color name="color_blue">#1BBBEE</color>
     <color name="color_green">#52D69D</color>
 
@@ -17,7 +39,6 @@
     <color name="color_yellow">#FCCD3D</color>
     <color name="color_red">#FF573F</color>
     <color name="color_grey">#AFBEC5</color>
-    <color name="color_grey_light">#E0E5E9</color>
     <color name="color_dark">#607D8B</color>
 
 
