implement ui schedule setting with new UI - Refactor all new ui

--- a/baseApp/src/main/res/drawable/bg_duration_control.xml
+++ b/baseApp/src/main/res/drawable/bg_duration_control.xml
@@ -3,10 +3,9 @@
     <item>
         <shape>
             <corners android:radius="@dimen/button_radius" />
-            <stroke
-                android:width="1.5dp"
-                android:color="@color/color_grey" />
-
+            <gradient
+                android:endColor="@color/color_blue_dark"
+                android:startColor="@color/color_blue_dark" />
         </shape>
     </item>
 </layer-list>
