--- a/baseApp/src/main/res/drawable/bg_view_control.xml
+++ b/baseApp/src/main/res/drawable/bg_view_control.xml
@@ -3,9 +3,10 @@
     <item>
         <shape>
             <corners android:radius="@dimen/button_radius" />
-            <stroke
-                android:width="1.5dp"
-                android:color="@color/color_grey" />
+
+            <gradient
+                android:endColor="@color/color_bg_button"
+                android:startColor="@color/color_bg_checkbox" />
 
         </shape>
     </item>
