--- a/baseApp/src/main/res/drawable/item_view_style.xml
+++ b/baseApp/src/main/res/drawable/item_view_style.xml
@@ -4,7 +4,7 @@
         <shape>
             <stroke
                 android:width="1dp"
-                android:color="@color/color_grey_light" />
+                android:color="@color/color_grey" />
         </shape>
     </item>
 </layer-list>
