--- a/baseApp/src/main/res/layout/activity_main.xml
+++ b/baseApp/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_main">
 
         <include
             android:id="@+id/header_container"
@@ -32,8 +33,8 @@
                 android:layout_marginBottom="@dimen/actionbar_height"
                 android:background="@drawable/cirle_background"
                 android:gravity="center"
-                android:text="@string/home_area_empty"
                 android:onClick="openEmptyScreen"
+                android:text="@string/home_area_empty"
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/connect_text_size_36"
                 android:visibility="gone" />
@@ -44,8 +45,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
+                android:orientation="horizontal"
                 android:paddingBottom="@dimen/actionbar_height"
-
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
 
@@ -55,7 +56,7 @@
                 android:layout_height="46dp"
                 android:layout_below="@+id/recyclerView"
                 android:layout_gravity="bottom"
-                android:background="@drawable/card_view_style"
+                android:background="@color/color_text_white"
                 android:gravity="center|center_vertical"
                 android:orientation="horizontal">
 
@@ -72,7 +73,8 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
                     android:text="Màn Hình Chính"
-                    android:textSize="@dimen/connect_text_size_menu" />
+                    android:textSize="@dimen/connect_text_size_menu"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/btn_add"
