--- a/baseApp/src/main/res/layout/detail_view.xml
+++ b/baseApp/src/main/res/layout/detail_view.xml
@@ -15,6 +15,7 @@
         android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/bg_main"
         android:fitsSystemWindows="true">
 
         <android.support.design.widget.AppBarLayout
@@ -77,13 +78,15 @@
                     <LinearLayout
                         style="@style/Widget.CardContent"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_card_view">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/detail_info_area"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                            android:textColor="@color/color_text_white" />
 
                         <TextView
                             android:id="@+id/txt_area_name"
@@ -132,6 +135,7 @@
                         style="@style/Widget.CardContent"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/bg_card_view"
                         android:orientation="vertical"
                         android:visibility="visible">
 
@@ -139,23 +143,27 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:text="@string/detail_motor_running"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                            android:textColor="@color/color_text_white" />
 
                         <TextView
                             android:id="@+id/txt_time_start"
                             style="@style/TextView.Screen.Detail"
+                            android:textColor="@color/color_text_white"
                             android:textSize="@dimen/connect_text_size_description"
                             tool:text="Thoi gian bat dau" />
 
                         <TextView
                             android:id="@+id/txt_time_working"
                             style="@style/TextView.Screen.Detail"
+                            android:textColor="@color/color_text_white"
                             android:textSize="@dimen/connect_text_size_description"
                             tool:text="Thoi gian tuoi" />
 
                         <TextView
                             android:id="@+id/txt_van"
                             style="@style/TextView.Screen.Detail"
+                            android:textColor="@color/color_text_white"
                             android:textSize="@dimen/connect_text_size_description"
                             tool:text="So van mo" />
                     </LinearLayout>
@@ -175,27 +183,32 @@
                     <LinearLayout
                         style="@style/Widget.CardContent"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_card_view">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/detail_info_motor"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                            android:textColor="@color/color_text_white" />
 
                         <TextView
                             android:id="@+id/txt_area_status"
                             style="@style/TextView.Screen.Detail"
+                            android:textColor="@color/color_text_white"
                             tool:text="Trang thai" />
 
                         <TextView
                             android:id="@+id/txt_area_van_used"
                             style="@style/TextView.Screen.Detail"
+                            android:textColor="@color/color_text_white"
                             tool:text="Van dang mo (van 01,02 ..)" />
 
                         <TextView
                             android:id="@+id/txt_schedule_working"
                             style="@style/TextView.Screen.Detail"
+                            android:textColor="@color/color_text_white"
                             tool:text="Lich dang tuoi" />
 
                     </LinearLayout>
@@ -212,22 +225,26 @@
                     <LinearLayout
                         style="@style/Widget.CardContent"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_card_view">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/detail_note"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                            android:textColor="@color/color_text_white" />
 
                         <TextView
                             android:id="@+id/txt_area_detail"
                             style="@style/TextView.Screen.Detail"
+                            android:textColor="@color/color_text_white"
                             tool:text="Khu vuc 01, buoi da xanh 2 nam tuoi" />
 
                         <TextView
                             android:id="@+id/txt_area_history"
                             style="@style/TextView.Screen.Detail"
+                            android:textColor="@color/color_text_white"
                             tool:text="Ngay 20 tuoi buoi sang luc 7h 30ph, buoi chieu luc 16h 30ph ..." />
 
                     </LinearLayout>
