--- a/baseApp/src/main/res/layout/item_data.xml
+++ b/baseApp/src/main/res/layout/item_data.xml
@@ -2,17 +2,23 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fl_root"
-    style="@style/Widget.CardItem"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:background="@drawable/border_rect_bg"
+    android:background="@drawable/bg_view_control"
     android:minHeight="60dp"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/txt_name"
         style="@style/TextView.Screen.Title"
+        android:layout_gravity="center"
+        android:background="@drawable/bg_corner_main"
+        android:gravity="center"
         android:text="Area name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textColor="@color/color_text_black"
+        android:textSize="24sp" />
+
 
     <TextView
         android:id="@+id/txt_phone"
