--- a/baseApp/src/main/res/layout/notification_view.xml
+++ b/baseApp/src/main/res/layout/notification_view.xml
@@ -11,14 +11,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_white"
+        android:background="@drawable/bg_main"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/actionbar_height"
             android:layout_gravity="top"
-            android:background="@drawable/card_view_style"
             android:gravity="center|left"
             android:orientation="horizontal">
 
@@ -28,7 +27,7 @@
                 android:layout_height="30dp"
                 android:layout_marginLeft="10dp"
                 android:gravity="center"
-                app:srcCompat="@mipmap/ic_back" />
+                app:srcCompat="@mipmap/ic_back_white" />
 
             <TextView
                 android:id="@+id/txt_title"
@@ -40,6 +39,11 @@
                 android:text="Thông Báo" />
 
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/color_text_white" />
 
         <!-- Action Bar End -->
 
@@ -60,7 +64,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:text="@string/sms_receiver_empty"
-            android:textColor="@color/color_dark"
+            android:textColor="@color/color_text_white"
             android:textSize="@dimen/connect_text_size_30"
             android:visibility="gone" />
     </LinearLayout>
