--- a/baseApp/src/main/res/values/styles.xml
+++ b/baseApp/src/main/res/values/styles.xml
@@ -11,10 +11,19 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/color_text_white</item>
         <item name="android:textSize">@dimen/connect_text_size_title</item>
     </style>
 
     <style name="TextView.Screen.Description" parent="android:Widget.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/color_text_white</item>
+        <item name="android:textSize">@dimen/connect_text_size_description</item>
+    </style>
+
+    <style name="TextView.Screen.Description1" parent="android:Widget.TextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">normal</item>
@@ -38,6 +47,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/color_text_white</item>
         <item name="android:textSize">@dimen/connect_text_size_description</item>
     </style>
 
